# routes/middlewares/board/like/_validation.ts
@@ -1,0 +1,19 @@
+import { oneOf, query, ValidationChain } from 'express-validator/check';
+
+const likeValidation = oneOf([
+  [
+    query('type')
+      .isString()
+      .custom(val => val === 'board'),
+    query('board_pk').isInt(),
+  ],
+  [
+    query('type')
+      .isString()
+      .custom(val => val === 'comment'),
+    query('comment_pk').isInt(),
+    query('board_pk').isInt(),
+  ],
+]);
+
+export default likeValidation;
